--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     <script>
         $(document).ready(function(){
             const fotos = [
-                "/WhatsApp Image 2025-05-13 at 13.35.46.jpeg",
-                "/WhatsApp Image 2025-05-13 at 13.35.49.jpeg",
-                "/WhatsApp Image 2025-05-13 at 13.35.51.jpeg",
+                "https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.46.jpeg",
+                "https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.49.jpeg",
+                "https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.51.jpeg",
                 // Adicione mais URLs de fotos aqui
             ];
 
