--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         .carousel-container .slick-slide img {
             width: 100%;
             border-radius: 10px; /* Arredondamento menor */
-            border: 3px solid #ff69b4; /* Borda menor */
+            border: 3px solid; /* Borda menor */
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7); /* Sombra menor */
         }
 
