--- a/index.html
+++ b/index.html
@@ -175,12 +175,18 @@
       <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.46.jpeg" alt="Foto 1"></div>
       <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.49.jpeg" alt="Foto 2"></div>
       <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/WhatsApp Image 2025-05-13 at 13.35.51.jpeg" alt="Foto 3"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/4.jpeg" alt="Foto 4"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/5.jpeg" alt="Foto 5"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/6.jpeg" alt="Foto 6"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/7.jpeg" alt="Foto 7"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/8.jpeg" alt="Foto 8"></div>
+      <div class="swiper-slide"><img src="https://lewism-dev.github.io/Minha-Page/9.jpeg" alt="Foto 9"></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
 
   <!-- Botão de Compartilhar -->
-  <button class="share-button" onclick="compartilhar()">💌 Compartilhar ou Salvar</button>
+  <button class="share-button" onclick="compartilhar()">💌 Compartilhar</button>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   <script>
@@ -248,7 +254,7 @@
     function compartilhar() {
       if (navigator.share) {
         navigator.share({
-          title: 'Nosso Amor 💖',
+          title: 'Ayara + Luis 💖',
           text: 'Olha só esse contador de amor lindo que fizemos!',
           url: window.location.href
         }).catch(err => console.log('Erro ao compartilhar:', err));
